--- a/Main/ezsploitv/MainWindow.xaml
+++ b/Main/ezsploitv/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:ezsploitv"
         xmlns:Wpf="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf" x:Name="window" x:Class="ezsploitv.MainWindow"
         mc:Ignorable="d"
-        Title="EzSploit V 6.4 - By mikusdev" Height="570" Width="800" WindowStyle="None" AllowsTransparency="True" Background="Transparent" MouseDown="Window_MouseDown">
+        Title="EzSploit V 6.5 - By mikusdev" Height="570" Width="800" WindowStyle="None" AllowsTransparency="True" Background="Transparent" MouseDown="Window_MouseDown">
     <Grid x:Name="chujnia">
         <Grid x:Name="MainGrid" Loaded="Grid_Loaded" Width="800">
             <Border x:Name="HomeBorder" BorderBrush="Black" BorderThickness="0" CornerRadius="8" Background="#FF0A0A0A" Width="800" Height="450" Margin="0,0,0,120">
@@ -273,7 +273,7 @@
                                     </Style>
                                 </Button.Resources>
                                 <Grid Height="45" Width="126">
-                                    <Label Content="Execute" Margin="45,5,15,5" Foreground="White" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                                    <Label Content="Execute" Margin="47,0,0,7" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
                                     <Image Height="31" Source="/Octicons-cloud-upload.svg.png" HorizontalAlignment="Left" VerticalAlignment="Top" Width="31" Margin="11,7,0,0"/>
                                 </Grid>
 
@@ -374,6 +374,16 @@
 
                                 </Button.Resources>
                             </Button>
+                            <Button x:Name="Fluxteam" Content="KeylessFlux" Background="#FF191919" Foreground="White" FontSize="16" Click="fluxteam_Click" RenderTransformOrigin="0.672,1.813" Margin="398,115,212,241" BorderBrush="#FF191919">
+                                <Button.Resources>
+                                    <Style TargetType="{x:Type Border}">
+                                        <Setter Property="CornerRadius" Value="8" />
+
+
+                                    </Style>
+
+                                </Button.Resources>
+                            </Button>
                         </Grid>
                         <Border x:Name="notifyBorder" BorderThickness="1" CornerRadius="8" Margin="193,-48,193,450">
                             <Grid Background="Black" Margin="1,8,-1,-1">
@@ -383,7 +393,7 @@
                     </Grid>
                 </Grid>
             </Border>
-            <Border x:Name="MainBorder" BorderBrush="Black" BorderThickness="1" CornerRadius="8" Margin="278,152,278,152" Height="NaN" Width="NaN" Background="Black" Opacity="0.5">
+            <Border x:Name="MainBorder" BorderBrush="Black" BorderThickness="1" CornerRadius="8" Margin="278,152,278,152" Height="NaN" Width="NaN" Background="Black" Opacity="0.5" d:IsHidden="True">
                 <Grid x:Name="startup">
                     <Image Margin="25,29,120,37" Source="/ezv5.ico" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
                         <Image.RenderTransform>
@@ -401,7 +411,7 @@
                     <Label x:Name="randomfacts" Content="                     fun fact: EzSploit is developed by kid" Foreground="White" FontWeight="Bold" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Center" Width="478" Margin="0,100,0,0"/>
                 </Grid>
             </Border>
-            <Border x:Name="consoleborder" Margin="0,450,0,0" BorderBrush="Black" BorderThickness="2" CornerRadius="8" Background="#FF0A0A0A">
+            <Border x:Name="consoleborder" Margin="0,450,0,0" BorderBrush="Black" BorderThickness="2" CornerRadius="8" Background="#FF0A0A0A" d:IsHidden="True">
                 <Grid Width="800" Height="120">
                     <Grid x:Name="konsolowygridek" Background="#FF0A0A0A" Width="800" Height="120" VerticalAlignment="Center" HorizontalAlignment="Center" >
                         <Grid.ColumnDefinitions>
@@ -412,7 +422,7 @@
                     </Grid>
                 </Grid>
             </Border>
-            <Border x:Name="COMETKEY" BorderBrush="Black" BorderThickness="1" CornerRadius="8" Margin="178,92,178,212" Height="NaN" Width="NaN" Background="Black" Visibility="Hidden">
+            <Border x:Name="COMETKEY" BorderBrush="Black" BorderThickness="1" CornerRadius="8" Margin="178,92,178,212" Height="NaN" Width="NaN" Background="Black" Visibility="Hidden" d:IsHidden="True">
                 <Grid x:Name="cometkeygrid">
                     <Label Content="Comet Key System" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="36" FontWeight="Bold"/>
                     <Button x:Name="getkey" FontSize="22" Click="getkey_Click" RenderTransformOrigin="0.672,1.813" Margin="10,132,251,51" ContentStringFormat="Clear" BorderBrush="{x:Null}" Background="#FF141414" Content="Get Key" Foreground="White" FontWeight="Bold">
